fixed mobile nav bar; aligned links and edited media queries

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ hr {
   align-items: center;
   margin: 0;    
   position: fixed;
+  z-index: 10;
 }
 
 .nav-content {
@@ -143,7 +144,6 @@ hr {
   
 }
 
-
 .item-data {
   text-align: right;
   align-self: flex-end;
@@ -156,36 +156,40 @@ hr {
   letter-spacing: .05em;
 }
 
-
-
-
-
 @media (max-width: 739px) {
   .nav {
       width: 100%;
-      height: 60px;
+      max-height: 72px;
   }
   .container {
       margin: 0 auto;
   }
   .nav-content {
       display: flex;
+      margin-left: 32px;
+      max-height: 72px;
+
   }
   .profile-img {
-      margin: auto;
+      margin: auto 0;
   }
   .nav-content img {
-      width: 48px;
+      width: 56px;
+      margin: 0;
       border: 2px solid #f58d47;
   }
   .nav-content ul {
       display: flex;
       flex-wrap: wrap;
-
-  }
+      text-align: left;    
+      padding: 4px 0 4px 10px;  
+    }
   .nav-content ul li {
-      font-size: 0.6em;
+    font-size: 0.6em;
+    width: 100px;
+    margin-top: 2px;
   }
+
   .resume-section {
       padding-top: 10vh;
   }
